# pulseq-cest

./: .gitignore  .gitmodules  Index.md  Install_pulseq_cest.m  Readme.md  install_pulseqcest.m  plot_seq_file.m  release_notes.md
SequenceSBB/: Untitled.asv  calculatePowerEquivalents.m  makeHSHalfPassagePulse.m  makeHSHalfPassagePulses.m  makeSaturationPulseFromCWPE.m
cest-seq-library/: APTw_3T_001_2uT_36SincGauss_DC90_2s_braintumor.m  APTw_3T_001_2uT_36SincGauss_DC90_2s_braintumor.seq  APTw_3T_001_2uT_36sinc_DC90_2s_braintumor.m  APTw_3T_001_2uT_sinc_DC90_2s_braintumor.m  APTw_3T_001_Zhou2019.m  APTw_3T_001_Zhou2019.seq  APTw_3T_002_2uT_20SincGauss_DC50_2s_braintumor.m  APTw_3T_002_2uT_20sinc_DC50_2s_braintumor.m  APTw_3T_002_2uT_20sinc_DC50_2s_braintumor.seq  APTw_3T_002_2uT_sinc_DC50_2s_braintumor.m  APTw_3T_002_Keupp2011.m  APTw_3T_002_Keupp2011.seq  APTw_3T_003_2uT_8block_DC95_834ms_braintumor.m  APTw_3T_003_2uT_8block_DC95_834ms_braintumor.seq  APTw_3T_003_2uT_8block_DC95_844ms_braintumor.m  APTw_3T_003_2uT_block_DC95_0.83s_braintumor.m  APTw_3T_003_GLINT.m  APTw_3T_003_GLINT.seq  APTw_3T_800ms.m  APTw_3T_800ms.seq  APTw_3T_800ms_backSL.m  APTw_3T_DC50.m  APTw_3T_DC50.seq  APTw_3T_DC90.m  APTw_3T_DC90.seq  DGE_7T_001_Xu2019.m  DGE_7T_001_Xu2019.seq  DGErho_3T_001_4uT_adiaSL_DC100_0.12s_braintumor.m  DGErho_3T_001_4uT_adiaSL_DC100_120ms_braintumor.m  DGErho_3T_001_4uT_adiaSL_DC100_120ms_braintumor.seq  DGErho_3T_001_Herz2019.m  DGErho_3T_001_Herz2019.seq  Glut_7T_001_Cai2003.m  Glut_7T_001_Cai2003.seq  Index.md  Readme.md
deprecated/: Install_pulseq_cest.m  Plot_pulseq_cest_Simulation.m  Read_simulation_params.m  Run_pulseq_cest_Simulation.m  Sim_pulseqSBB.m  Simulate_example.m  WriteExamplePulseqSBBZSpectrum.m  WriteSLExpPulseqSBBZSpectrum.m  compile_pulseqSBB_Sim.m  deprecationWarning.m  plot_seq_file.m
examples/: APTw_3T_example.seq  GM_3T_example_bmsim.yaml  GM_3T_multi_isochromats_example_bmsim.yaml  OH_3T_example.seq  Readme.md  Simulate_example.m  plot_seq_file.m  read_seq_simulateExampleUI.m  simulateExample.m  simulateExampleUI.m  simulateVaryingParametersExample.m
pulseq-cest-sim/: LICENSE.md  Plot_pulseq_cest_Simulation.m  Read_simulation_params.m  Readme.md  Run_pulseqSBB_Simulation.m  Run_pulseq_cest_Simulation.m  Sim_pulseqSBB.mexa64  Sim_pulseqSBB.mexmaci64  Sim_pulseqSBB.mexw64  Standard_pulseq_cest_Simulation.m  calc_power_equivalents.m  compile_pulseqSBB_Sim.m  compile_pulseqcest.m  functionSignatures.json  plotSimulationResults.m  pulseqcest.m  pulseqcestmex.mexa64  pulseqcestmex.mexmaci64  pulseqcestmex.mexw64  readSimulationParameters.m  simulate_pulseqcest.m
pulseq-cest-sim/src/: BMCSim.cpp  BMCSim.h  BlochMcConnellSolver.h  CMakeLists.txt  Doxyfile  PulseqCESTmex.cpp  Readme.md  Sim_pulseqSBB.cpp  Sim_pulseqSBB_T.h  Sim_pulseqSBB_py.cpp  Sim_pulseqSBB_py.h  SimulationParameters.cpp  SimulationParameters.h
pulseq-cest-sim/src/html/: _bloch_mc_connell_solver_8h_source.html  _sim__pulseq_s_b_b___t_8h_source.html  _simulation_parameters_8h_source.html  annotated.html  class_bloch_mc_connell_solver-members.html  class_bloch_mc_connell_solver.html  class_c_e_s_t_pool-members.html  class_c_e_s_t_pool.html  class_m_t_pool-members.html  class_m_t_pool.html  class_simulation_parameters-members.html  class_simulation_parameters.html  class_water_pool-members.html  class_water_pool.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  menudata.js  struct_scanner-members.html  struct_scanner.html
pulseq-cest-sim/src/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js  variables_4.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_c.js
seq-examples/: Readme.md
seq-generation/: Readme.md  WriteExamplePulseqSBBZSpectrum.m  writeExampleAPTwSeqFile.m  writeExampleMiniCESTSeqFile.m  (+1 more)
(+62 files in other folders)
